fix the addresses in the footer so we don't have an extra line hogging up screen real estate

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -57,17 +57,13 @@
     .col2
       %strong Charlottesville
       %br/
-      1110 Market Street East
-      %br/
-      Suite N7
+      1110 Market St East Suite N7
       %br/
       Charlottesville, VA 22903
     .col3
       %strong Boulder
       %br/
-      3080 Valmont Road
-      %br/
-      Suite 280
+      3080 Valmont Rd Suite 280
       %br/
       Boulder, CO 80301
     .col4
