use hand cursor on client section

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -308,6 +308,9 @@ section#blueprint-image {
       &.bottom {
         border-bottom: none;
       }
+      &:hover {
+        cursor: pointer;
+      }
     }
     li.tendril {
       background: #1588c3 url(client_logos/tendril.png) center center no-repeat;
