--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,9 +12,9 @@
 
   %nav.divider#main
     %ul#nav-list
-      %li= link_to "HOME", root_path
-      %li= link_to "ABOUT US", about_path
-      %li= link_to "OUR PROJECTS", portfolio_path
-      %li= link_to "OUR SERVICES", services_path
-      %li= link_to "OUR BLOG", blog_posts_path
-      %li= link_to "CONTACT US", "#contact"
+      = tab_to "HOME", root_path
+      = tab_to "ABOUT US", about_path
+      = tab_to "OUR PROJECTS", portfolio_path
+      = tab_to "OUR SERVICES", services_path
+      = tab_to "OUR BLOG", blog_posts_path
+      = tab_to "CONTACT US", "#contact"
