increase the line spacing in the company/services/projects section to look nicer

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -143,6 +143,7 @@ section#blueprint-image {
         color: $gray;
         font: 12px 'Droid Serif', serif;
         margin-bottom: 30px;
+        line-height: 150%;
       }
     }
   }
