make the capitalization on the buttons more consistent

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,7 +30,7 @@
     .divider
 
     = link_to "#", :class => "blue-arrow" do
-      Read about how we craft our software
+      Read About How We Craft Software
       .arrow
 
 .divider
