--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -40,7 +40,7 @@
     %p
       Loading tweets, just a moment...
     = link_to "https://www.twitter.com/coshxlabs", :class => "dark-blue-arrow" do
-      Follow us
+      Follow Us
       .arrow
   %h2.contact-heading ONLY ONE THING LEFT TO DO. CONTACT US USING YOUR PREFERRED METHOD BELOW.
   #contact-details.divider
@@ -71,7 +71,7 @@
       %br/
       YOUR NEXT PROJECT?
       = link_to "#", :class => "blue-arrow" do
-        Get a proposal
+        Get a Proposal
         .arrow
   .footer-bottom
     %span.copy Copyright © 2012 Coshx Labs. All rights reserved
