--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -52,7 +52,7 @@
       007-042-1409
       %br/
       %strong Email:
-      %a#contact-email{:href => "#"} info@coshx.com
+      = mail_to "info@coshx.com", "info@coshx.com", :id => "contact-email"
       %br/
     .col2
       %strong Charlottesville
@@ -70,7 +70,7 @@
       CONSIDERING COSHX FOR
       %br/
       YOUR NEXT PROJECT?
-      = link_to "#", :class => "blue-arrow" do
+      = link_to "mailto:info@coshx.com?subject=Coshx%20Labs%20quote%20request", :class => "blue-arrow" do
         Get a Proposal
         .arrow
   .footer-bottom
@@ -85,4 +85,4 @@
       |
       %a{:href => services_path} Services
       |
-      %a{:href => "#"} Contact
+      = mail_to "info@coshx.com", "Contact"
