--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
       %a#twitter{:href => "https://www.twitter.com/coshxlabs", :title => "Twitter"}
         %span.displace
           Twitter
-      %a#facebook{:href => "#", :title => "Facebook"}
+      %a#facebook{:href => "https://www.facebook.com/CoshxLabs", :title => "FaceBook"}
         %span.displace
           Facebook
 
