--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,23 +3,24 @@
     %a{:id => "top-nav", :href => "#top"}
   %section#footer-content.w960.clearfix
     %h2 Latest blog posts
-    #latest-blogs.divider
-      .post.first
-        .info
-          = image_tag "kovsky.png"
-          %span
-            = link_to last_two_posts[0].author.name, "#"
-            %br/
-            = last_two_posts[0].posted_on.strftime("%B %e, %Y")
-        .content
-          %h2
-            = link_to last_two_posts[0].title, last_two_posts[0]
-          %p
-            = preserve last_two_posts[0].preview_html.html_safe
-          .links
-            = link_to "Read more", last_two_posts[0], :class => "read-more"
-            |
-            %a.comments{:href => "#{polymorphic_url(last_two_posts[0])}#disqus_thread"}
+    -unless last_two_posts[0].nil?
+      #latest-blogs.divider
+        .post.first
+          .info
+            = image_tag "kovsky.png"
+            %span
+              = link_to last_two_posts[0].author.name, "#"
+              %br/
+              = last_two_posts[0].posted_on.strftime("%B %e, %Y")
+          .content
+            %h2
+              = link_to last_two_posts[0].title, last_two_posts[0]
+            %p
+              = preserve last_two_posts[0].preview_html.html_safe
+            .links
+              = link_to "Read more", last_two_posts[0], :class => "read-more"
+              |
+              %a.comments{:href => "#{polymorphic_url(last_two_posts[0])}#disqus_thread"}
       .post
         .info
           = image_tag "ryan.png"
