--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -79,7 +79,8 @@
               = image_tag("team/#{person.img}")
               = person.name
       %li
-        %a.new{:href => "#"} 
+        %a{:href => "#"} 
+          .new
           = image_tag("team/new.png", :mouseover => "team/new-white.png")
           You?
 
