--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -78,16 +78,23 @@
               .portrait
               = image_tag("team/#{person.img}")
               = person.name
-      %li
+      %li.last
         %a{:href => "#"} 
           .new
           = image_tag("team/new.png", :mouseover => "team/new-white.png")
           You?
-
+    
   %section#testimonials.w960.clearfix
     %header
       %h3 Testimonials
       %a.test-nav.next{:href => ""}
-      %a.test-nav.prev{:href => "#"}
-    #testimonial-content
+      %a.test-nav.prev{:href => ""}
+
+    %ul
+      %li.selected
+        %p "But if you look at history the great men and women of the world have always been defined by their enemies."
+        .author
+          %img{:alt => "", :src => "/assets/lex.png"}/
+          Lex Luthor
+
 
