centers the blueprint image, changes the border color of the message bubble

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -43,7 +43,7 @@ a.html:active {
   width: 387px;
   height: 438px;
   position: relative;
-
+  left: 20px;
   a {
     position: absolute;
     width: 24px;
