--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,7 +2,7 @@
   %div.row.footer-content
     #footer-nav
       %a{:id => "top-nav", :href => "#top"}
-    %h2 Latest blog posts
+    %h2.blogpost Latest blog posts
     -unless last_two_posts[0].nil?
       #latest-blogs.divider
         .post.first
@@ -37,7 +37,7 @@
             = link_to "Read more", last_two_posts[1], :class => "read-more"
             |
             %a.comments{:href => "#{polymorphic_url(last_two_posts[1])}#disqus_thread"}
-    #footer-tweet.divider
+    .footer-tweet
       %p
         Loading tweets, just a moment...
       = link_to "https://www.twitter.com/coshxlabs", :class => "dark-blue-arrow" do
