--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -476,10 +476,7 @@ margin:auto;
   }
 }
 
-section#about-us{
-	margin-top: 50px;
-}
-section#about-us h1.formula{
+h1.formula{
 	font: bold 48px 'Pt Sans', sans-serif;
 	text-align: left;
 	color: #FFFFFF;
