--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -273,6 +273,7 @@ overflow:hidden;
   color: white;
   border-bottom: 1px solid #004264;
   p {
+    margin-top:15px;
     float: left;
     a {
       color: #004264;
