--- a/app/assets/stylesheets/code_blocks.css.scss
+++ b/app/assets/stylesheets/code_blocks.css.scss
@@ -5,8 +5,8 @@
     padding: 10px 20px;
     margin: 10px 0;
     overflow-x: auto;
-    @include border-radius(5px);
-    @include box-shadow(black 1px 1px 6px inset);
+   /* @include border-radius(5px);
+    @include box-shadow(black 1px 1px 6px inset);*/
 }
 
 .post-body pre {
