featured_projects to projects with feature to make some of project featured.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -91,7 +91,7 @@
     .arrow
 
 
-= render :partial => "featured_projects/list", :locals => {:featured_projects => @featured_projects}
+= render :partial => "projects/list", :locals => {:featured_projects => @featured_projects}
   
 
 .divider
