--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -1,9 +1,11 @@
-#admin-menu
-  %ul
-    %li=link_to "Dashboard", admin_root_path
-    %li=link_to "New Blog Post", new_post_path
-    %li=link_to "New Job Posting", new_job_path
-  %span.status
-    Signed in as
-    = current_admin.name
-    = link_to('Sign Out', destroy_admin_session_path, :method => :delete)
+.row#admin-menu
+  .nine.columns
+    %ul.link-list
+      %li=link_to "Dashboard", admin_root_path
+      %li=link_to "New Blog Post", new_post_path
+      %li=link_to "New Job Posting", new_job_path
+  .three.columns
+    %span.status
+      Signed in as
+      = current_admin.name
+      = link_to('Sign Out', destroy_admin_session_path, :method => :delete)
