--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,21 +1,37 @@
-%h1 Listing projects
+%h1 PORTFOLIO
 
-%table
-  %tr
-    %th Title
-    %th Description
-    %th
-    %th
-    %th
+%div.featured_projects
+  = "<div class=row>".html_safe
+  - @projects.each_with_index do |p, i|
+    ="</div>".html_safe if i % 3 == 0
+    ="<div class=row>".html_safe if i % 3 == 0
+    %div.four.columns
+      .fp_img{:class => "no#{i}"}
+        =image_tag p.picture_url if p.picture?
+        .overlay
+          .link-wrapper
+            %a.view{:href => "#"}
+            .separator
+            %a.case{:href => "#"}
+      - if admin_signed_in?
+        .admin_bar
+          %ul.link-list
+            %li= link_to 'Show', p
+            %li= link_to 'Edit', edit_project_path(p)
+            %li.divider
+            %li= link_to 'Destroy', p, :confirm => 'Are you sure?', :method => :delete, :style => "color:red;"
+  = "</div>".html_safe
 
-  - @projects.each do |project|
-    %tr
-      %td= project.title
-      %td= project.description
-      %td= link_to 'Show', project
-      %td= link_to 'Edit', edit_project_path(project)
-      %td= link_to 'Destroy', project, :confirm => 'Are you sure?', :method => :delete
+- if admin_signed_in?
+  = link_to 'New Project', new_project_path, :class => "large blue button"
 
-%br
+%section#testimonials.row
+  %header.divider
+    %h2 Testimonials
+    = link_to " ", "/get_random_quote", :remote => true, :class => "test-nav next"
+    = link_to " ", "/get_random_quote", :remote => true, :class => "test-nav prev"
 
-= link_to 'New Project', new_project_path
+  = render :partial => "quotes/random_quote", :locals => {:random_quote => random_quote}
+
+
+
